# game.libretro.bnes

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/bnes/: 0001-Fix-compile-error.patch  CMakeLists.txt  bnes.txt
game.libretro.bnes/: addon.xml  addon.xml.in
gameclient.bnes/: addon.xml
